SVM Model added

--- a/src/resources/NLPPRoject.ipynb
+++ b/src/resources/NLPPRoject.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "e261f2ac",
    "metadata": {
     "scrolled": true
@@ -87,7 +87,7 @@
        "4          1  We stayed here for four nights in October. The..."
       ]
      },
-     "execution_count": 4,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,6 +102,8 @@
     "from nltk.stem.porter import PorterStemmer\n",
     "from nltk.stem import WordNetLemmatizer\n",
     "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn import svm\n",
+    "from sklearn.metrics import classification_report\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import confusion_matrix\n",
@@ -134,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "51b5b87b",
    "metadata": {},
    "outputs": [],
@@ -220,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "82bc8dd5",
    "metadata": {},
    "outputs": [],
@@ -230,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "bd9b0355",
    "metadata": {},
    "outputs": [
@@ -298,7 +300,7 @@
        "4          1  we stay for four night octob hotel staff welco..."
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "c083caaa",
    "metadata": {},
    "outputs": [
@@ -339,12 +341,12 @@
    "id": "b73bc049",
    "metadata": {},
    "source": [
-    "## Defining the model"
+    "## Defining the models"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "id": "2b4c5f03",
    "metadata": {},
    "outputs": [
@@ -352,10 +354,10 @@
      "data": {
       "text/plain": [
        "Pipeline(steps=[('vectorizer', TfidfVectorizer()),\n",
-       "                ('classifier', LogisticRegression(max_iter=1100))])"
+       "                ('classifier', SVC(kernel='linear'))])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,12 +366,17 @@
     "from sklearn.pipeline import Pipeline\n",
     "\n",
     "tfidf_vec = TfidfVectorizer()\n",
+    "# Logistic regression\n",
     "lgr = LogisticRegression(max_iter=1100)\n",
     "\n",
-    "model = Pipeline([('vectorizer', tfidf_vec),\n",
-    "                 ('classifier', lgr)])\n",
+    "model = Pipeline([('vectorizer', tfidf_vec), ('classifier', lgr)])\n",
     "\n",
-    "model.fit(x_train, y_train)"
+    "# SVM with kernel\n",
+    "svm_lin = svm.SVC(kernel='linear')\n",
+    "model_svm = Pipeline([('vectorizer', tfidf_vec), ('classifier', svm_lin)])\n",
+    "\n",
+    "model.fit(x_train, y_train)\n",
+    "model_svm.fit(x_train, y_train)"
    ]
   },
   {
@@ -382,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "id": "bdfa16ed",
    "metadata": {},
    "outputs": [
@@ -390,7 +397,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1 0]\n"
+      "Logistic Regression: [1 0]\n",
+      "SVM: [1 0]\n"
      ]
     }
    ],
@@ -399,58 +407,74 @@
     "               \"The hotels treat you like garbage if you book through booking.com. I've booked through them a few times and have only recently just realised I get downgraded on stuff with the hotel if my reservation is through booking.com. The crappiest rooms, no parking available, rooms not being serviced, amenities a disappointment.. The list goes on.. Plus you pay more!! Next time I'll just book through the hotel itself. It's cheaper and you get treated better\"] \n",
     "# from booking.com\n",
     "example_result = model.predict(example_text)\n",
-    "print(example_result)"
+    "print(f\"Logistic Regression: {example_result}\")\n",
+    "\n",
+    "example_result = model_svm.predict(example_text)\n",
+    "print(f\"SVM: {example_result}\")"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "b5ca1a5f",
+   "cell_type": "markdown",
+   "id": "848239d2",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[1694,  477],\n",
-       "       [ 907, 4105]])"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "last_words = model.predict(x_test)\n",
-    "confusion_matrix(last_words, y_test)"
+    "## Result printer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "99d86bb6",
+   "execution_count": 18,
+   "id": "d701be1b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_results(inp_model):\n",
+    "\tlast_words = inp_model.predict(x_test)\n",
+    "\tconf_matrix = confusion_matrix(last_words, y_test)\n",
+    "\ta_score = accuracy_score(last_words, y_test)\n",
+    "\tpre_score = precision_score(last_words, y_test, average = 'weighted')\n",
+    "\trec_score = recall_score(last_words, y_test, average = 'weighted')\n",
+    "\tf1_score = 2 * (pre_score * rec_score) / (pre_score + rec_score)\n",
+    "\tprint(\"Confusion matrix: \", conf_matrix)\n",
+    "\tprint(\"Accuracy : \", a_score)\n",
+    "\tprint(\"Precision : \", pre_score)\n",
+    "\tprint(\"Recall : \", rec_score)\n",
+    "\tprint(\"F1 : \", f1_score)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "67ad1c8b",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy :  0.8073228456076849\n",
-      "Precision :  0.8219660141278845\n",
-      "Recall :  0.8073228456076849\n",
-      "F1 :  0.8145786274218189\n"
+      "Logistic Regression:\n",
+      "Confusion matrix:  [[1789  461]\n",
+      " [ 850 4083]]\n",
+      "Accuracy :  0.8174857301962968\n",
+      "Precision :  0.8294345904277571\n",
+      "Recall :  0.8174857301962968\n",
+      "F1 :  0.8234168141771099\n",
+      "SVM:\n",
+      "Confusion matrix:  [[1819  497]\n",
+      " [ 820 4047]]\n",
+      "Accuracy :  0.8166504246136712\n",
+      "Precision :  0.8257045314154083\n",
+      "Recall :  0.8166504246136712\n",
+      "F1 :  0.8211525209095983\n"
      ]
     }
    ],
    "source": [
-    "a_score = accuracy_score(last_words, y_test)\n",
-    "pre_score = precision_score(last_words, y_test, average = 'weighted')\n",
-    "rec_score = recall_score(last_words, y_test, average = 'weighted')\n",
-    "f1_score = 2 * (pre_score * rec_score) / (pre_score + rec_score)\n",
-    "print(\"Accuracy : \", a_score)\n",
-    "print(\"Precision : \", pre_score)\n",
-    "print(\"Recall : \", rec_score)\n",
-    "print(\"F1 : \", f1_score)"
+    "print(\"Logistic Regression:\")\n",
+    "get_results(model)\n",
+    "\n",
+    "print(\"SVM:\")\n",
+    "get_results(model_svm)"
    ]
   },
   {
@@ -469,8 +493,11 @@
    "outputs": [],
    "source": [
     "import pickle\n",
-    "filename = 'pre_trained.sav'\n",
-    "pickle.dump(model, open(filename, 'wb'))"
+    "def save_file(filename, model):\n",
+    "\tpickle.dump(model, open(filename, 'wb'))\n",
+    "\n",
+    "save_file('log_trained.sav', model)\n",
+    "save_file('svm_trained.sav', model_svm)\n"
    ]
   },
   {
